--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,3 +6,14 @@ layout: default
   <h1 class="page-title">{{ page.title }}</h1>
   {{ content }}
 </div>
+
+<pre>
+	page.id: {{ page.id }}
+	page.title: {{ page.title }}
+	page.excerpt: {{ page.excerpt }}
+	page.url: {{ page.url }}
+	page.tags: {{ page.tags }}
+	page.path: {{ page.tags }}
+	site.url: {{ site.url }}
+	site.baseurl: {{ site.baseurl }}
+</pre>
