--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,10 +15,10 @@
   </title>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ site.baseurl }}/_assets/css/poole.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/_assets/css/syntax.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/_assets/css/lanyon.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/_assets/css/breadcrumb.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/public/css/poole.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/public/css/syntax.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/public/css/lanyon.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/public/css/breadcrumb.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
 
   <!-- Icons -->
