--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
 <div class="page">
+  {% include nav-breadcrumbs.html %}
   <h1 class="page-title">{{ page.title }}</h1>
   {{ content }}
 </div>
