--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -12,4 +12,6 @@ layout: default
       {% for local_variable in local_variables %}
       local_variable: {{ local_variable | jsonify }}
       {% endfor %}
+      page: {{ page | jsonify }}
+      site: {{ site | jsonify }}
 </pre>
