--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
         <div class="container">
           <h3 class="masthead-title">
             <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
-            <small>{{ site.tagline }}</small>
+            <small><a href="{{ site.github.repository_url }}/">{{ site.github.repository_nwo }}</a></small>
           </h3>
         </div>
       </div>
