--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,7 +9,9 @@
   </div>
 
   <nav class="sidebar-nav">
+    {% comment %}
     <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}/">{{ site.github.repository_name }}</a>
+    {% endcomment %}
 
     {% comment %}
       The code below dynamically generates a sidebar nav of pages with
