--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,24 +11,13 @@
          content to avoid any CSS collisions with our real content. -->
     <div class="wrap">
 
-      <header class="masthead">
-        <div class="container">
-          <h3 class="masthead-title">
-            <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
-            <small><a href="{{ site.github.repository_url }}/">{{ site.github.repository_nwo }}</a></small>
-          </h3>
-        </div>
-      </header>
+    {% include header.html %}      
 
       <article class="container content">
         {{ content }}
       </article>
 
-      <footer class="footer">
-          <p>
-            &copy; {{ site.time | date: '%Y' }} <a href="{{ site.github.owner_url }}/">{{ site.github.owner_name }}</a>
-          </p>
-      </footer>
+    {% include footer.html %}      
 
     </div>
 
