--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,19 +5,25 @@
 
   <body class="sidebar-overlay layout-reverse">
 
+    {% comment %}
     {% include sidebar.html %}
+    {% endcomment %}
 
     <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
          content to avoid any CSS collisions with our real content. -->
     <div class="wrap">
 
+    {% comment %}
     {% include header.html %}      
+    {% endcomment %}
 
       <article class="container content">
         {{ content }}
       </article>
 
+    {% comment %}
     {% include footer.html %}      
+    {% endcomment %}
 
     </div>
 
