--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,9 @@
         {{ content }}
       </article>
 
+    {% comment %}
     {% include footer.html %}      
+    {% endcomment %}
 
     </div>
 
