--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,9 +18,11 @@
       </article>
 
       <footer class="footer">
+        <div class="container">
           <p>
             &copy; {{ site.time | date: '%Y' }} <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>
           </p>
+        </div>
       </footer>
 
     {% comment %}
