--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
       <footer class="footer">
         <div class="container">
           <p>
-            &copy; {{ site.time | date: '%Y' }} <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>
+            &copy; {{ site.time | date: '%Y' }} <a href="{{ site.github.owner_url }}/">{{ site.github.owner_name }}</a>
           </p>
         </div>
       </footer>
