--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,6 +4,8 @@ layout: default
 
 <div class="page">
   {% include breadcrumbs.html %}
+  {% comment %}
   <h1 class="page-title">{{ page.title }}</h1>
+  {% endcomment %}
   {{ content }}
 </div>
