--- a/public/css/breadcrumb.css
+++ b/public/css/breadcrumb.css
@@ -1,19 +1,35 @@
 .breadcrumb {
     display: block;
+    overflow: hidden;
 
     font-family: "PT Sans", Helvetica, Arial, sans-serif;
+    list-style: none;
 
     border-radius: 3px;
     background-color: #f9f9f9;
 }
+
 .breadcrumb li {
+    float: left;
+
     font-size: 85%;
 }
+
+.breadcrumb li a {
+    position: relative;
+
+    display: block;
+    float: left;
+
+    text-decoration: none;
+}
+
 .breadcrumb > .active {
     font-weight: bold;
 
     color: #515151;
 }
+
 .breadcrumb > li + li:before {
     content: "\003E\00a0";
 
