--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,9 @@ layout: default
 ---
 
 <div class="page">
-  {% include breadcrumbs.html %}
+  {% if page.url !="/" %}
+    {% include breadcrumbs.html %}
+  {% endif %}
   {% comment %}
   <h1 class="page-title">{{ page.title }}</h1>
   {% endcomment %}
