--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,7 +27,7 @@
       {% endif %}
     {% endfor %}
 
-    <a class="sidebar-nav-item" href="{{ repository_url }}">GitHub repo</a>
+    <a class="sidebar-nav-item" href="{{ site.github.repository_url }}">GitHub repo</a>
     <!-- 
     <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
     -->
